<?xml version="1.0"?>
<package format="2">
  <name>hust_arms_usv_msgs</name>
  <version>0.0.0</version>
  <description>The hust_arms_usv_msgs package</description>

  <maintainer email="wangzhao9562@gmail.com">wangzhao9562</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>std_msgs</depend>
  <depend>geographic_msgs</depend>
  <depend>geometry_msgs</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
